# spiffy

./: INSTALLATION.md  LICENSE  PERFORMANCE.md  README.md  RUST_FIX.md  RUST_INSTALL.md  activate.sh  build_fast.sh  db_vulnerability.py  requirements.txt  security bypass.py  server.crt  setup.py  spiffy  spiffy.py  spiffy_runner.sh  spiffy_vault.db  spiffy_x.py  test_security.py  ultron_zero.db  view_database.py
spiffy/: README.md  server.key  spiffy.py  spiffy_x.py
spiffy_cpp/: CMakeLists.txt  bindings.cpp  crypto_accelerator.cpp  crypto_accelerator.h  data_processor.cpp  data_processor.h  network_scanner.cpp  network_scanner.h
spiffy_documentation/: PROMPT_CASE_STUDY.md  README_SECURITY.md  SECURITY_MASTERY.md
spiffy_fast/: data_utils.c  data_utils.html  data_utils.pyx  network_utils.c  network_utils.html  network_utils.pyx  setup.py
spiffy_omega/: CMakeLists.txt  README.md  spiffy_omega.cpp
spiffy_omega/include/bifrost/: crypto.hpp
spiffy_omega/include/core/: token_system.hpp  vault.hpp  watchdog.hpp
spiffy_omega/src/bifrost/: crypto.cpp
spiffy_omega/src/core/: token_system.cpp  vault.cpp  watchdog.cpp
spiffy_standard_security_suite/: alpha_sentinel.db  alpha_sentinel.py  db_auditor.py  main_security_tool.py  run_alpha_sentinel.sh  run_security_tool.sh  security_utils.py  spiffy_vault.db  test_security_modules.py
spiffy_ultron_zero_v22/: .gitignore  .gitignore_sensitive  ACCELERATORS_BUILD.md  BLUETOOTH_SCANNER.md  DEPLOYMENT_GUIDE.md  GLOBAL_ACCESS_GUIDE.md  LICENSE  NEW_FEATURES.md  NGROK_SETUP.md  PERFORMANCE_GUIDE.md  POLYGLOT_GUIDE.md  PRIVATE_CHAT_LICENSE.txt  PRIVATE_CHAT_README.md  QUICKSTART.md  SECURITY_CHECKLIST.md  TEST_RESULTS.md  USAGE_INSTRUCTIONS.md  WEB_CHAT_GUIDE.md  analytics.py  analytics_report.json  async_pool.py  bifrost_tokens.py  bluetooth_scan.json  bluetooth_security.py  build_private_chat.sh  cache_manager.py  chat_server.py  chat_web_server.py  check_chat_status.sh  config.json  daily_audit.json  daily_audit.txt  deploy.sh  device_labeler.py  encrypted_chat.py  error_handler.py  export_utils.py  global_vault.py  hardware_fingerprint.py  install.sh  (+20 more)
spiffy_ultron_zero_v22/core/: __init__.py  token_system.py  watchdog.py
spiffy_ultron_zero_v22/cpp_accelerators/: Makefile  bluetooth_scanner.cpp  chat_network.cpp  fast_scanner.cpp  fast_scanner_v2.cpp  libbt_scanner.dylib  scanner_wrapper.py  scanner_wrapper_v2.py
spiffy_ultron_zero_v22/java_agent/: BifrostAgent.java
spiffy_ultron_zero_v22/php_dashboard/: index.php
spiffy_ultron_zero_v22/php_dashboard/api/: findings.php
spiffy_ultron_zero_v22/ruby_automation/: omega_dsl.rb
spiffy_ultron_zero_v22/ruby_automation/workflows/: daily_scan.rb
spiffy_ultron_zero_v22/rust_bluetooth/: Cargo.toml
spiffy_ultron_zero_v22/rust_bluetooth/src/: lib.rs
spiffy_ultron_zero_v22/rust_chat_crypto/: Cargo.toml
spiffy_ultron_zero_v22/rust_chat_crypto/src/: lib.rs
spiffy_ultron_zero_v22/rust_crypto/: Cargo.toml  crypto_wrapper.py
spiffy_ultron_zero_v22/rust_crypto/src/: lib.rs
spiffy_ultron_zero_v22/rust_private_chat/: Cargo.toml
spiffy_ultron_zero_v22/rust_private_chat/src/: lib.rs
spiffy_ultron_zero_v22/sentinels/: __init__.py  base_sentinel.py
spiffy_ultron_zero_v22/templates/: chat.html  chat_client.html  host_dashboard.html
