[package]
name = "rust-private-chat"
version = "1.0.0"
edition = "2021"
license = "MIT"

[lib]
name = "rust_private_chat"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
hmac = "0.12"
sha2 = "0.10"
digest = "0.10"
hkdf = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
